[gd_scene load_steps=23 format=3 uid="uid://jvwcodm55c1t"]

[ext_resource type="Script" uid="uid://ddyd0xgiwrfys" path="res://Assets/Scripts/Masters/LevelManager.gd" id="1_p5wma"]
[ext_resource type="Script" uid="uid://fe5igt3dfey2" path="res://Assets/Scripts/Masters/ResourceManager.gd" id="2_3i3hp"]
[ext_resource type="Script" uid="uid://p5fa6xsppk3f" path="res://Assets/Scripts/Masters/WaveManager.gd" id="2_7x1ww"]
[ext_resource type="Script" uid="uid://ds3m5it8756mk" path="res://Assets/Resources/WaveData.gd" id="4_3e7vo"]
[ext_resource type="MeshLibrary" uid="uid://cii6cupimmybi" path="res://Assets/Models/Tiles.tres" id="4_iw5u7"]
[ext_resource type="Script" uid="uid://c8gtchiwo1c1e" path="res://Assets/Scripts/Masters/GridManager.gd" id="4_nyyhf"]
[ext_resource type="Script" uid="uid://0igd8g4yf8ww" path="res://Assets/Resources/Deployment.gd" id="5_qckgf"]
[ext_resource type="PackedScene" uid="uid://43kchsu37yop" path="res://Assets/Scenes/Enemies/BaseEntity.tscn" id="6_7raby"]
[ext_resource type="PackedScene" uid="uid://b8fsp0257cefq" path="res://Assets/Scenes/Enemies/FastEntity.tscn" id="7_43aa2"]
[ext_resource type="PackedScene" uid="uid://3hbbyq0vhtle" path="res://Assets/Scenes/Enemies/StrongEntity.tscn" id="8_bq8rn"]

[sub_resource type="Resource" id="Resource_muap1"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("6_7raby")
_EnemyCount = 15.0
DeployDelay = 1.0
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_3n5l5"]
script = ExtResource("4_3e7vo")
Deployments = Array[ExtResource("5_qckgf")]([SubResource("Resource_muap1")])
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_c5xmg"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("7_43aa2")
_EnemyCount = 5.0
DeployDelay = 0.3
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_5yq84"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("7_43aa2")
_EnemyCount = 5.0
DeployDelay = 0.3
PreDeployDelay = 0.12
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_1hwsu"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("7_43aa2")
_EnemyCount = 5.0
DeployDelay = 0.3
PreDeployDelay = 5.0
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_eumoi"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("7_43aa2")
_EnemyCount = 5.0
DeployDelay = 0.3
PreDeployDelay = 5.12
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_f54oi"]
script = ExtResource("4_3e7vo")
Deployments = Array[ExtResource("5_qckgf")]([SubResource("Resource_c5xmg"), SubResource("Resource_5yq84"), SubResource("Resource_1hwsu"), SubResource("Resource_eumoi")])
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Resource" id="Resource_wt8ej"]
script = ExtResource("5_qckgf")
PathNode = NodePath("Path3D")
Enemy = ExtResource("8_bq8rn")
_EnemyCount = 5.0
DeployDelay = 3.0
metadata/_custom_type_script = "uid://0igd8g4yf8ww"

[sub_resource type="Resource" id="Resource_ukere"]
script = ExtResource("4_3e7vo")
Deployments = Array[ExtResource("5_qckgf")]([SubResource("Resource_wt8ej")])
metadata/_custom_type_script = "uid://ds3m5it8756mk"

[sub_resource type="Curve3D" id="Curve3D_nqbn4"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, 15, 0, 0, 0, 0, 0, 0, 1, 0, 15, 0, 0, 0, 0, 0, 0, 1, 0, -15, 0, 0, 0, 0, 0, 0, 14, 0, -15),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="PlaneMesh" id="PlaneMesh_nyyhf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iw5u7"]
transparency = 1
albedo_color = Color(0, 1, 0, 0.47843137)

[node name="LevelManager" type="Node3D"]
script = ExtResource("1_p5wma")

[node name="ResourceManager" type="Node3D" parent="."]
script = ExtResource("2_3i3hp")

[node name="WaveManager" type="Node3D" parent="."]
script = ExtResource("2_7x1ww")
waves = Array[ExtResource("4_3e7vo")]([SubResource("Resource_3n5l5"), SubResource("Resource_f54oi"), SubResource("Resource_ukere")])

[node name="Path3D" type="Path3D" parent="WaveManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("Curve3D_nqbn4")

[node name="GridManager" type="GridMap" parent="."]
mesh_library = ExtResource("4_iw5u7")
data = {
"cells": PackedInt32Array(6, 7, 3, 5, 7, 3, 4, 7, 3, 3, 7, 3, 2, 7, 3, 1, 7, 3, 0, 7, 3, 0, 6, 3, 0, 5, 3, 0, 4, 3, 0, 3, 3, 0, 2, 3, 0, 1, 3, 0, 0, 3, 0, 65535, 3, 0, 65534, 3, 0, 65533, 3, 0, 65532, 3, 0, 65531, 3, 0, 65530, 3, 0, 65529, 3, 0, 65528, 3, 1, 65528, 3, 2, 65528, 3, 3, 65528, 3, 4, 65528, 3, 5, 65528, 3, 6, 65528, 3, 6, 6, 0, 5, 6, 1, 4, 6, 1, 3, 6, 1, 2, 6, 1, 1, 6, 1, 1, 5, 1, 1, 4, 1, 1, 3, 1, 1, 2, 1, 1, 1, 1, 1, 0, 1, 1, 65535, 1, 1, 65534, 1, 1, 65533, 1, 1, 65532, 1, 1, 65531, 1, 1, 65530, 1, 1, 65529, 1, 2, 65529, 1, 3, 65529, 1, 4, 65529, 1, 5, 65529, 1, 6, 65529, 0, 6, 65527, 0, 5, 65527, 1, 4, 65527, 1, 3, 65527, 1, 2, 65527, 1, 1, 65527, 1, 0, 65527, 1, 65535, 65527, 1, 65535, 65528, 1, 65535, 65529, 1, 65535, 65530, 1, 65535, 65531, 1, 65535, 65532, 1, 65535, 65533, 1, 65535, 65534, 1, 65535, 65535, 1, 65534, 65535, 1, 65535, 0, 1, 65535, 1, 1, 65535, 2, 1, 65535, 3, 1, 65535, 4, 1, 65535, 5, 1, 65535, 6, 1, 65535, 7, 1, 65535, 8, 1, 0, 8, 1, 1, 8, 1, 2, 8, 1, 3, 8, 1, 4, 8, 1, 5, 8, 1, 6, 8, 0, 6, 9, 0, 5, 9, 1, 4, 9, 1, 3, 9, 1, 2, 9, 1, 1, 9, 1, 0, 9, 1, 65535, 9, 1, 65534, 9, 1, 65534, 8, 1, 65534, 7, 1, 65534, 6, 1, 65534, 5, 1, 65534, 4, 1, 65534, 3, 1, 65534, 2, 1, 65534, 1, 1, 65533, 1, 0, 65533, 0, 0, 65533, 65535, 0, 65534, 65534, 1, 65534, 65533, 1, 65534, 65532, 1, 65534, 65531, 1, 65534, 65530, 1, 65534, 65529, 1, 65534, 65528, 1, 65534, 65527, 1, 65534, 65526, 1, 65534, 0, 1, 0, 65526, 1, 1, 65526, 1, 2, 65526, 1, 3, 65526, 1, 4, 65526, 1, 5, 65526, 1, 6, 65526, 0, 65535, 65526, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 0, 2, 65531, 1, 2, 65532, 1, 2, 65533, 1, 2, 65534, 1, 2, 65535, 1, 2, 0, 1, 2, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1, 2, 5, 1, 3, 5, 1, 4, 5, 1, 5, 5, 1, 6, 5, 0, 6, 10, 0, 5, 10, 0, 4, 10, 0, 3, 10, 0, 2, 10, 0, 1, 10, 0, 0, 10, 0, 65535, 10, 0, 65534, 10, 0, 65533, 10, 0, 65533, 9, 0, 65533, 8, 0, 65533, 7, 0, 65533, 6, 0, 65533, 5, 0, 65533, 4, 0, 65533, 3, 0, 65533, 2, 0, 65533, 65534, 0, 65533, 65533, 0, 65533, 65532, 0, 65533, 65531, 0, 65533, 65530, 0, 65533, 65529, 0, 65533, 65528, 0, 65533, 65527, 0, 65533, 65526, 0, 65533, 65525, 0, 65534, 65525, 0, 65535, 65525, 0, 0, 65525, 0, 1, 65525, 0, 2, 65525, 0, 3, 65525, 0, 4, 65525, 0, 5, 65525, 0, 6, 65525, 0, 6, 65531, 0, 5, 65531, 0, 4, 65531, 0, 3, 65531, 0, 3, 65532, 0, 3, 65533, 0, 3, 65534, 0, 3, 65535, 0, 3, 0, 0, 3, 1, 0, 3, 2, 0, 3, 3, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0)
}
script = ExtResource("4_nyyhf")

[node name="TileHighlight" type="MeshInstance3D" parent="GridManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
mesh = SubResource("PlaneMesh_nyyhf")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_iw5u7")
